# Apothesis

./: .gitignore  .qmake.stash  Apothesis  Apothesis.pro  CMakeLists.txt  Makefile  README.md  SurfaceReaction.cpp  abstract_process.h  adsorption.cpp  adsorption.h  apothesis  apothesis.cpp  apothesis.h  diffusion.cpp  diffusion.h  errorhandler.h  factory_process.h  input.kmc  input.md  io.cpp  io.h  lattice.cpp  main.cpp  parameters.cpp  process.cpp  register.cpp  register.h  site.h
build3/: input.kmc
latex/: annotated.tex  classAbstractProcess.eps  classAbstractProcess.tex  classFactoryProcess.tex  classIO.tex  classLattice.tex  classMicroProcesses_1_1Adsorption.tex  classMicroProcesses_1_1Diffusion.eps  classMicroProcesses_1_1Diffusion.tex  classPointers.eps  classPointers.tex  classRegister.eps  classRegister.tex  classSurfaceTiles_1_1Site.tex  classUtils_1_1ErrorHandler.eps  classUtils_1_1Parameters.tex  hierarchy.tex  namespaceSurfaceTiles.tex  namespaces.tex
processing/: Untitled.ipynb  Validation.ipynb  time.ipynb
src/: Apothesis.pro  CMakeLists.txt  README.md  apothesis.cpp  apothesis.h  apothesisMPI.cpp  apothesisThreads.cpp  apothesismain.cpp  diffusion_DIF1.cpp  heights.txt  input.kmc  input.kmc_old  main.cpp  parametric_study.py  pointers.h  properties.cpp  properties.h  register.h  register_lattice.h  runtest.sh
src/IO/: CMakeLists.txt  SpeciesIO.cpp  SpeciesIO.h  cml_reader.cpp  cml_reader.h  io.cpp  io.h  read.cpp  read.h  reader.cpp  reader.h  xyz_reader.cpp  xyz_reader.h
src/aux/: random_generator.cpp  random_generator.h  randomc.h
src/error/: CMakeLists.txt  errorhandler.cpp  errorhandler.h
src/extLibs/: mersenne.cpp  random_generator.h
src/latex/: classApothesis.tex  classIO.eps  classLattice.eps  classMicroProcesses_1_1Adsorption.eps  classMicroProcesses_1_1Process.eps  classMicroProcesses_1_1Process.tex  classUtils_1_1ErrorHandler.tex  classUtils_1_1Parameters.eps  index.tex  namespaceMicroProcesses.tex  refman.tex
src/lattice/: BCC.cpp  BCC.h  FCC.cpp  FCC.h  HCP.cpp  HCP.h  SimpleCubic.cpp  SimpleCubic.h  abstract_lattice.cpp  abstract_lattice.h  adsorption_fcc_110.cpp  adsorption_fcc_110.h  diamond.cpp  diamond.h  factory_lattice.cpp  factory_lattice.h  lattice.cpp  lattice.h  site.cpp  site.h
src/parametric_study/: cleanOutputPlotter.py  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt  outputCleaned1.txt  outputCleaned2.txt  outputCleaned3.txt  outputCleaned4.txt  outputCleaned5.txt  outputCleaned6.txt  outputCleaned7.txt  outputCleaned8.txt  outputCleaned9.txt  outputCleaner.py
src/processes/: CMakeLists.txt  SurfaceReaction.cpp  SurfaceReaction.h  abstract_process.cpp  abstract_process.h  adsorption.cpp  adsorption.h  adsorption_2sites.cpp  adsorption_2sites.h  adsorption_fcc1102s_multi.cpp  adsorption_fcc1102s_multi.h  adsorption_fcc1102s_simple.cpp  adsorption_fcc1102s_simple.h  adsorption_fcc110_simple.cpp  adsorption_fcc110_simple.h  adsorption_new.cpp  adsorption_new.h  adsorption_perform.cpp  adsorption_perform.h  adsorption_rules.cpp  adsorption_rules.h  adsorption_simple_cubic.cpp  adsorption_simple_cubic.h  adsorption_type.cpp  adsorption_type.h  adsorption_types.cpp  adsorption_types.h  adsroption_simple_cubic4s_multi.cpp  adsroption_simple_cubic_4s_multi.h  desorption.cpp  desorption.h  desorption_fcc110_multi.cpp  desorption_fcc110_multi.h  desorption_fcc110_simple.cpp  desorption_fcc110_simple.h  desorption_new.cpp  desorption_new.h  desorption_perform.cpp  desorption_perform.h  desorption_rules.cpp  (+39 more)
src/processes/Process/: Adsorption.h  Process.h
src/species/: species.cpp  species.h  species_new.cpp  species_new.h
src/test/: old_input.kmc
src/test/V2/: input.kmc
test/: README  input.kmc  input_config
test/V1/: input.kmc
test/Validation_step/: input.kmc
test/multi_ads/: input.kmc
test/multi_des/: input.kmc
test/multi_diff/: input.kmc
test/multi_rxn/: .input.kmc.swp  input.kmc
test/single_ads/: input.kmc
test/single_des/: input.kmc
test/single_diff/: input.kmc
